--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-color": "^2.19.3",
     "react-color-palette": "^7.3.0",
     "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^1.3.1",
     "three": "^0.171.0"
   },
   "devDependencies": {
