--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "npm run build && gh-pages -d out --dotfiles"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-three/drei": "^9.120.4",
