--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gh-pages": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^39.2.2"
   }
 }
