--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,19 @@
 {
     "rewrites": [
-    {
-        "source": "/models/:path*",
-        "destination": "/public/models/:path*"
-    }
-]
+        {
+            "source": "/models/:path*",
+            "destination": "/public/models/:path*"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/models/:path*",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "model/gltf-binary"
+                }
+            ]
+        }
+    ]
 }
